--- a/assets/scss/variables/_variables.scss
+++ b/assets/scss/variables/_variables.scss
@@ -7,4 +7,5 @@ $white: rgb(255, 255, 255);
 $black: rgb(27, 27, 27);
 $yellow: rgb(255, 183, 3);
 $red: rgb(154, 19, 14);
-$blue: rgb(33, 158, 188);
+$blue: #023047;
+$link-color: #346aff;
